Spirit:  A little more SPI logic.

--- a/drivers/wireless/spirit/Kconfig
+++ b/drivers/wireless/spirit/Kconfig
@@ -12,4 +12,12 @@ config WL_SPIRIT
 
 if WL_SPIRIT
 
+config WL_SPIRIT_SPIFREQUENCY
+	int "Spirit SPI frequency"
+	default 10000000
+	---help---
+		Frequency at which to operate the SPI interface to the Spirit part.
+		The default is the absolution maximum and you may likely have to
+		reduce this for your board.
+
 endif
