--- a/configs/b-l475e-iot01a/src/Makefile
+++ b/configs/b-l475e-iot01a/src/Makefile
@@ -47,7 +47,7 @@ else
 CSRCS += stm32_userleds.c
 endif
 
-ifeq ($(CONFIG_IEEE802154_SPIRIT1),y)
+ifeq ($(CONFIG_SPIRIT_NETDEV),y)
 CSRCS += stm32_spirit.c
 endif
 
