--- a/drivers/wireless/spirit/Kconfig
+++ b/drivers/wireless/spirit/Kconfig
@@ -20,6 +20,21 @@ config WL_SPIRIT_SPIFREQUENCY
 		The default is the absolution maximum and you may likely have to
 		reduce this for your board.
 
+config WL_SPIRIT_REGDEBUG
+	bool "Enable register level debug"
+	default n
+	depenes ont DEBUG_WIRELESS_INFO
+	---help---
+		Enable logic to dump each value read from and written to the Sprit
+		registers.
+
+config WL_SPIRIT_FIFODUMP
+	bool "Enable debug FIFO dump"
+	default n
+	depenes ont DEBUG_WIRELESS_INFO
+	---help---
+		Enable logic to dump data written to and read from the linear FIFO.
+
 endif
 
 source drivers/wireless/spirit/drivers/Kconfig
