--- a/drivers/i2c/Kconfig
+++ b/drivers/i2c/Kconfig
@@ -36,11 +36,17 @@ config I2C_DRIVER
 		this driver is to support I2C testing.  It is not suitable for use
 		in any real driver application.
 
-config PCA9540BDP
-	bool "NXP PCA9540BDP multiplexer"
+menu "I2C Multiplexer Support"
+
+config I2CMULTIPLEXER_PCA9540BDP
+	bool "PCA9540BDP NXP multiplexer"
 	default n
+	depends on I2C
 	---help---
-		NXP PCA9540BDP i2c multiplexer support
+		Enable support for the NXP PCA9540BDP i2c multiplexer
+
+# put more i2c mux devices here
+
+endmenu # I2C Multiplexer Support
 
 endif # I2C
-
